--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <body>
 
     <h1>Meeting Transcription Bot</h1>
-    <p>Enter a Google Meet URL to begin recording and transcription.</p>
+    <p>Enter a Google Meet or Microsoft Teams URL to begin recording and transcription.</p>
 
-    <input type="text" id="meetUrl" placeholder="https://meet.google.com/xxx-yyyy-zzz">
+    <input type="text" id="meetUrl" placeholder="https://meet.google.com/xxx-yyyy-zzz or https://teams.live.com/...">
     <button id="startBtn" onclick="startJob()">Start Transcription</button>
     <button id="stopBtn" onclick="stopJob()" style="display: none;">Stop Bot</button>
     <button id="summaryBtn" onclick="downloadSummary()" style="display: none;">Download Summary</button>
