--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <pre id="transcript"></pre>
 
     <script>
-        const API_BASE_URL = "https://cnmkdwx4zmk15g-8080.proxy.runpod.net";
+        const API_BASE_URL = "https://o5gcdii5cai47u-8080.proxy.runpod.net";
 
         const statusDiv = document.getElementById('status');
         const transcriptDiv = document.getElementById('transcript');
@@ -150,4 +150,5 @@
 
 </body>
 </html>
+
 
